<resources>
    <string name="app_name">Football Manager</string>
    <string name="nombre_user"></string>
    <string name="team">TEAM</string>
    <string name="manager">MANAGER</string>
    <string name="autor">Edgar Garcia</string>
    <string name="version">1.0</string>
    <string name="centre">IES Simarro</string>
    <string name="about">App Info</string>
    <string name="delete">Eliminar</string>
    <string name="edit">Editar</string>
    <string name="recInfo">Quiero recibir información \n acerca de actualizaciones.</string>
    <string name="elemListaNombre">Nombre Jugador</string>
    <string name="elemListaNum">Número</string>
    <string name="elemListaPos">Posicion</string>
    <string name="modNewJugador">Nuevo Jugador</string>
    <string name="nombreHint">Nombre</string>
    <string name="numeroHint">Numero</string>
    <string name="telefonoHint">Teléfono</string>
    <string name="modPlayerPos">Posición:</string>
    <string name="crearJugador">Crear jugador</string>
    <string name="editarJugador">Editar jugador</string>
    <string name="dispNews">Noticias no disponibles</string>
    <string name="perfUser">Usuario</string>
    <string name="valorNull">null</string>
    <string name="mailPerf">Email</string>
    <string name="apiTemperatura">TEMPERATURA:</string>
    <string name="apiHumedad">HUMEDAD:</string>
    <string name="apiWind">VIENTO:</string>
    <string name="loginTit">Login</string>
    <string name="usrName">Username</string>
    <string name="passHint">Password</string>
    <string name="logErr">Error en el login</string>
    <string name="emptyValues">Los campos están vacios</string>
    <string name="entrarLogin">Sign in</string>
    <string name="cancelLogin">Cancel</string>
    <string name="infoString">Info</string>
    <string name="navJugadores">Jugadores</string>
    <string name="navNews">Noticias</string>
    <string name="navTime">Tiempo en Xátiva</string>
    <string name="navOther">Otras opciones</string>
    <string name="navLogout">Cerrar sesión</string>
    <string name="prefPref">Preferencias</string>
    <string name="toolbarNew">Nuevo</string>
    <string name="resetPlayers">Borrar plantilla</string>

    <string-array name="posiciones">
        <item>Portero</item>
        <item>Defensa</item>
        <item>Medio</item>
        <item>Delantero</item>
    </string-array>


</resources>
