<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#90FF9C"
    android:id="@+id/linear"
    android:padding="20dp"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/loginTit"
        android:textSize="20sp"
        android:textColor="@android:color/darker_gray"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/darker_gray"
        />

    <EditText
        android:id="@+id/username"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/usrName"
        android:textColor="@android:color/darker_gray"
        />
    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/passHint"
        android:textColor="@android:color/darker_gray"
        />

    <TextView
        android:id="@+id/tvError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logErr"
        android:layout_marginLeft="10dp"
        android:textColor="@android:color/holo_red_light"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/tvVacio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/emptyValues"
        android:textColor="@android:color/holo_red_light"
        android:layout_marginLeft="10dp"
        android:visibility="gone"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        >

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/entrarLogin"
            android:textColor="@color/white"
            android:backgroundTint="#016F10"

            />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:backgroundTint="#016F10"
            android:text="@string/cancelLogin" />
    </LinearLayout>

</LinearLayout>