<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.simarro.pmm_practica11edgar.FragmentInfo"
    android:background="@drawable/weather"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        >




        <TextView
            android:id="@+id/tvTemperatura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apiTemperatura"
            android:textColor="@color/white"
            android:layout_marginBottom="50dp"
            android:textSize="30sp"
            android:textAlignment="center"
            />

        <TextView
            android:id="@+id/tvHumedad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/apiHumedad"
            android:textSize="30sp"
            android:layout_marginBottom="50dp"
            android:textAlignment="center"
            />

        <TextView
            android:id="@+id/tvViento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/apiWind"
            android:textSize="30sp"
            android:textAlignment="center"
            />


    </LinearLayout>
</FrameLayout>