<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.simarro.pmm_practica11edgar.FragmentInfo"
    android:background="@drawable/fondo_login"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:background="@color/playersColor"
        android:layout_margin="30dp"

        >

        <ImageView
            android:id="@+id/imgView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/user"

            />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:textSize="30sp"
            android:text="@string/perfUser"/>
        <TextView
            android:id="@+id/tvUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp"
            android:textSize="15sp"
            android:text="@string/valorNull"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:textSize="30sp"
            android:text="@string/mailPerf"/>

        <TextView
            android:id="@+id/tvCorreo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:textSize="15sp"
            android:text="@string/valorNull"/>





    </LinearLayout>

</FrameLayout>